# vita-core

./: .gitignore  CONTRIBUTING.md  README.md  install.py  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
src/: main.py
src/utils/: args.py  config.py  jaison.py  logging.py
src/utils/helpers/: audio.py  multiplexor.py
src/utils/mcp/: manager.py
src/utils/operations/: __init__.py  manager.py
src/utils/operations/base/: error.py  operation.py
src/utils/operations/embedding/: openai.py
src/utils/operations/filter_audio/: base.py  pitch.py  rvc.py
src/utils/operations/filter_text/: mod_koala.py
src/utils/operations/stt/: azure.py  base.py  fish.py  kobold.py  openai.py
src/utils/operations/t2t/: kobold.py  openai.py
src/utils/operations/tts/: azure.py  fish.py  kobold.py  melo.py  pytts.py
src/utils/processes/: base.py  error.py  manager.py
src/utils/processes/processes/: koboldcpp.py
src/utils/prompter/: message.py  prompter.py
src/utils/server/: app_server.py  common.py
tests/: __init__.py
